# cpp_with_webui

./: CMakeLists.txt  LICENSE  README.md  build-and-run.sh
.devcontainer/: Dockerfile  devcontainer.json
backend/: CMakeLists.txt  main.cpp
cmake/: global_deps.cmake
python/: python_test.py
ui/: CMakeLists.txt  index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.svelte  app.css
ui/src/lib/: Simple.svelte
